added redis scaffolding

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.redis.host=${host:localhost}
 spring.redis.port=${port:6370}
-spring.redis.password=${password}
+spring.redis.password=${password:test}
